tests/failing/dbx_for.db
funct App() => {
   return (
      <label for="name">Name</label>
      <input id="name" />
   )
}